--- a/httpdplaybook.yaml
+++ b/httpdplaybook.yaml
@@ -2,6 +2,8 @@
 - name: Deploy index.html and configure HTTP server
   hosts: ec2_instances
   become: yes
+  vars:
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'  
   tasks:
     - name: Copy index.html to the instances
       copy:
