--- a/httpdplaybook.yaml
+++ b/httpdplaybook.yaml
@@ -6,7 +6,7 @@
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
   tasks:
     - name: Install httpd (Apache HTTP Server)
-      yum:
+      dnf:
         name: httpd
         state: present
     - name: Start httpd service
